# celesos.contracts

./: .gitignore  CMakeLists.txt  README.md  build.sh
celes.bios/: CMakeLists.txt
celes.bios/include/celes.bios/: celes.bios.hpp
celes.bios/src/: celes.bios.cpp
celes.msig/: CMakeLists.txt
celes.msig/include/celes.msig/: celes.msig.hpp
celes.msig/src/: celes.msig.cpp
celes.token/: CMakeLists.txt
celes.token/include/celes.token/: celes.token.hpp
celes.token/src/: celes.token.cpp
celes.unregd/: CMakeLists.txt  eosio.unregd.cpp  eosio.unregd.hpp
celes.unregd.tmp/: CMakeLists.txt
celes.unregd.tmp/include/: abieos_numeric.hpp  types.hpp
celes.unregd.tmp/include/celes.unregd/: celes.unregd.hpp
celes.unregd.tmp/libs/: CMakeLists.txt
celes.unregd.tmp/libs/include/ecc/: uECC_vli.h
celes.unregd.tmp/libs/include/sha3/: byte_order.h
celes.unregd.tmp/libs/src/sha3/: sha3.c
celes.unregd.tmp/src/: celes.unregd.cpp  exchange_state.cpp  snapshot.cpp
celes.unregd/include/: snapshot.hpp  types.hpp
celes.unregd/include/celes.unregd/: celes.unregd.hpp
celes.unregd/include/sha3/: sha3.h
celes.unregd/ram/: exchange_state.hpp
celes.unregd/ricardian/: cleles.unregd-setmaxceles-rc.md
celes.unregd/src/: abieos_numeric.hpp  celes.unregd.cpp  celes.unregd.hpp  exchange_state.cpp  snapshot.cpp
celes.unregd/src/ecc/: uECC.c  uECC.h
celes.unregd/src/ram/: exchange_state.cpp  exchange_state.hpp
celes.unregd/src/sha3/: sha3.c  ustd.h
celes.unregd/src/utils/: inline_calls_helper.hpp  snapshot.hpp
celes.unregd/utils/: authority.hpp
celes.wrap/: CMakeLists.txt  README.md
celes.wrap/include/celes.wrap/: celes.wrap.hpp
celes.wrap/src/: celes.wrap.cpp
celesos.bios/: CMakeLists.txt
celesos.bios/include/celesos.bios/: celesos.bios.hpp
celesos.bios/src/: celesos.bios.cpp
celesos.msig/: CMakeLists.txt  README.md
celesos.msig/include/celesos.msig/: celesos.msig.hpp
celesos.msig/src/: celesos.msig.cpp
celesos.system/: CMakeLists.txt  README.md
celesos.system/include/celesos.system/: celesos.system.hpp  exchange_state.hpp  native.hpp
celesos.system/src/: celesos.system.cpp  delegate_bandwidth.cpp  exchange_state.cpp  producer_pay.cpp  voting.cpp
celesos.test/: CMakeLists.txt
celesos.test/include/celesos.test/: celesos.test.hpp
celesos.test/src/: celesos.test.cpp
celesos.wrap/: CMakeLists.txt
celesos.wrap/include/celesos.wrap/: celesos.wrap.hpp
celesos.wrap/src/: celesos.wrap.cpp
contracts/: CMakeLists.txt
contracts/celes.stake/inclide/celes.stake/: celes.stake.hpp
contracts/celes.stake/src/: celes.stake.cpp
contracts/celes.token/: CMakeLists.txt  README.md
contracts/celes.token/include/celes.token/: celes.token.hpp
contracts/celes.token/src/: celes.token.cpp
contracts/celes.unregd/: CMakeLists.txt
contracts/celes.unregd/ricardian/: celes.unregd-chngaddress-rc.md  celes.unregd-regaccount-rc.md  cleles.unregd-setmaxceles-rc.md
contracts/celes.unregd/src/: abieos_numeric.hpp  celes.unregd.cpp
contracts/celes.unregd/src/ecc/: uECC_vli.h
contracts/celes.unregd/src/sha3/: byte_order.c  sha3.h  ustd.h
contracts/celes.unregd/src/utils/: authority.hpp  snapshot.hpp
contracts/celesos.bios/: CMakeLists.txt
contracts/celesos.bios/include/celesos.bios/: celesos.bios.hpp
contracts/celesos.bios/ricardian/: celesos.bios.contracts.md.in
contracts/celesos.bios/src/: celesos.bios.cpp
contracts/celesos.msig/: CMakeLists.txt
contracts/celesos.msig/include/celesos.msig/: celesos.msig.hpp
contracts/celesos.msig/src/: celesos.msig.cpp
contracts/celesos.system/: CMakeLists.txt  README.md
contracts/celesos.system/include/celesos.system/: celesos.system.hpp  exchange_state.hpp  native.hpp
contracts/celesos.system/src/: celesos.system.cpp  delegate_bandwidth.cpp  exchange_state.cpp  name_bidding.cpp  native.cpp  producer_pay.cpp  rex.cpp  rex.results.cpp  voting.cpp
contracts/celesos.test/: CMakeLists.txt
contracts/celesos.test/include/celesos.test/: celesos.test.hpp
contracts/celesos.test/src/: celesos.test.cpp
contracts/celesos.wrap/: CMakeLists.txt  README.md
contracts/celesos.wrap/include/celesos.wrap/: celesos.wrap.hpp
contracts/celesos.wrap/src/: celesos.wrap.cpp
contracts/poolcontract/: CMakeLists.txt
contracts/poolcontract/include/poolcontract/: poolcontract.hpp
contracts/poolcontract/src/: inline_helper.hpp  poolauthority.hpp  poolcontract.cpp
eosio.unregd/: CMakeLists.txt  README.md  eosio.unregd.abi
eosio.unregd/include/eosio.unregd/: eosio.unregd.hpp  exchange_state.hpp
eosio.unregd/include/utils/: authority.hpp  inline_calls_helper.hpp  snapshot.hpp
eosio.unregd/ram/: exchange_state.cpp
eosio.unregd/src/: eosio.unregd.cpp  exchange_state.cpp
eosio.unregd/src/sha3/: byte_order.c
eosio.unregd/utils/: snapshot.hpp
tests/: CMakeLists.txt  celes.msig_tests.cpp  celes.token_tests.cpp  celes.wrap_tests.cpp  celesos.system_tester.hpp  celesos.system_tests.cpp  contracts.hpp.in  main.cpp
tests/test_contracts/: exchange.wast
tests/test_contracts/eosio.msig.old/: Readme.txt
tests/test_contracts/eosio.system.old/: Readme.txt  eosio.system.abi
